Fixing search button and search bar alignment

--- a/src/components/SearchBtn.scss
+++ b/src/components/SearchBtn.scss
@@ -1,3 +1,11 @@
 .search-btn {
-    
+    background-color: #0079FF;
+    border: 0;
+    border-radius: 11px;
+    color: #fff;
+    font-family: inherit;
+    font-size: .875rem;
+    font-weight: 700;
+    padding: 12.5px 18px;
+    margin: 7px;
 }
