--- a/src/containers/SearchBar.scss
+++ b/src/containers/SearchBar.scss
@@ -1,8 +1,8 @@
 .searchbar {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     margin-top: 18px;
-    padding: 18px 7px 17px 7px;
     background-color: #fff;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, .25));
     border-radius: 11px;
@@ -18,5 +18,6 @@
     img {
         padding: 7px;
         max-width: 20px;
+        max-height: 20px;
     }
 }
